# research-agent

./: .env.example  .gitignore  README.md  REQUIREMENTS.md  config.example.yaml  description.md  predefined_topics.yaml  pyproject.toml
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  RunDetailPage.tsx  RunsPage.tsx  SubscriptionsPage.tsx
frontend/src/styles/: global.css
src/research_agent/: api_server.py  cli.py  config.py  models.py  output.py  pipeline.py  scheduler.py  sources.py  storage.py  subscriptions.py
src/research_agent/api/: app.py  auth.py  deps.py  schemas.py
tests/: test_api.py  test_pipeline.py  test_sources.py  test_subscriptions.py
