[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-agent"
version = "0.1.0"
description = "Personal research agent — Phase 0 foundation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10,<4",
    "bcrypt>=4.1,<5",
    "email-validator>=2.1,<3",
    "fastapi>=0.115,<1",
    "feedparser>=6.0,<7",
    "httpx>=0.27,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "python-jose[cryptography]>=3.3,<4",
    "pyyaml>=6.0,<7",
    "typer>=0.12,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-httpx>=0.30,<1",
    "respx>=0.21,<1",
    "httpx>=0.27,<1",
]

[project.scripts]
research-agent = "research_agent.cli:app"
research-agent-api = "research_agent.api_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/research_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
